Added a very rough and ready ability spec generator.

--- a/lib/generators/canard/ability/templates/abilities.rb.erb
+++ b/lib/generators/canard/ability/templates/abilities.rb.erb
@@ -1,4 +1,4 @@
-abilities_for(<%= ":#{ability_name}" %>) do
+abilities_for(<%= ":#{name}" %>) do
 
   # Define abilities for the user role here. For example:
   #
