--- a/lib/generators/rspec/ability/templates/abilities_spec.rb.erb
+++ b/lib/generators/rspec/ability/templates/abilities_spec.rb.erb
@@ -40,10 +40,10 @@ describe Ability, "for :<%= name %>" do
     end
     
 <% definition.cans.each do |can| -%>
-    it { should be_able_to( :<%= can -%>,    <%= can == 'index' ? model.camelize : "@#{model}" -%> ) }
+    it { should be_able_to( <%= ":#{can},".ljust(12, ' ') + (can == 'index' ? model.camelize : "@#{model}") -%> ) }
 <% end -%>
 <%- definition.cannots.each do |cannot| -%>
-    it { should_not be_able_to( :<%= cannot -%>,    <%= cannot == 'index' ? model.camelize : "@#{model}" -%> ) }
+    it { should_not be_able_to( <%= ":#{cannot},".ljust(12, ' ') + (cannot == 'index' ? model.camelize : "@#{model}") -%> ) }
 <% end -%>
 
   end
