Updated the generator to create abilities in the Abilities#default_path directory.

--- a/lib/generators/canard/ability/templates/abilities.rb.erb
+++ b/lib/generators/canard/ability/templates/abilities.rb.erb
@@ -1,4 +1,4 @@
-abilities_for(<%= ":#{name}" -%>) do
+Canard::Abilities.for(<%= ":#{name}" -%>) do
 
 <% if ability_definitions.empty? -%>
   # Define abilities for the user role here. For example:
