--- a/lib/generators/rspec/ability/templates/abilities_spec.rb.erb
+++ b/lib/generators/rspec/ability/templates/abilities_spec.rb.erb
@@ -2,13 +2,19 @@ require_relative '../spec_helper'
 
 require "cancan/matchers"
 
-describe Ability, "for :<%= name %>" do
+describe Canard::Abilities, "for <%= plural_name %>" do
 
   before do
-    @<%= name %> = Factory.create(:<%= name %>_user)
+<% if Rails.configuration.generators.options[:rails][:fixture_replacement] == :factory_girl -%>
+    @user = Factory.create(:<%= name %>_user)
+<% elsif Rails.configuration.generators.options[:rails][:fixture_replacement] == :machinist -%>
+    @user = User.make!(:<%= name %>)
+<% else -%>
+  @user = User.create(:roles => %w(<%= name -%>))
+<% end -%>
   end
   
-  subject { Ability.new(@<%= name -%>) }
+  subject { Ability.new(@user) }
   
 <% if ability_definitions.empty? -%>
 # Define your ability tests thus;
@@ -32,22 +38,29 @@ describe Ability, "for :<%= name %>" do
 #  # on Activity
 <% else -%>
 <% definitions do |model, definition| -%>
+  <% model_name = model.camelize -%>
   
-  describe 'on <%= model.camelize -%>' do
+  describe 'on <%= model_name -%>' do
 
     before do
+<% if Rails.configuration.generators.options[:rails][:fixture_replacement] == :factory_girl -%>
       @<%= model -%> = Factory.create(:<%= model -%>)
+<% elsif Rails.configuration.generators.options[:rails][:fixture_replacement] == :machinist -%>
+      @<%= model -%> = <%= model_name -%>.make!
+<% else -%>
+      @<%= model -%> = <%= model_name -%>.create
+<% end -%>
     end
     
 <% definition.cans.each do |can| -%>
-    it { should be_able_to( <%= ":#{can},".ljust(12, ' ') + (can == 'index' ? model.camelize : "@#{model}") -%> ) }
+    it { should be_able_to( <%= ":#{can},".ljust(12, ' ') + "@#{model}" -%> ) }
 <% end -%>
 <%- definition.cannots.each do |cannot| -%>
-    it { should_not be_able_to( <%= ":#{cannot},".ljust(12, ' ') + (cannot == 'index' ? model.camelize : "@#{model}") -%> ) }
+    it { should_not be_able_to( <%= ":#{cannot},".ljust(12, ' ') + "@#{model}" -%> ) }
 <% end -%>
 
   end
-  # on <%= model.camelize %>
+  # on <%= model_name %>
   <% end -%>
   
 <% end -%>  
